--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <title> shilpi is girl </title>
   <p>shilpi intelligent hai</p>
-  <a href="https://ibb.co/v6SBTtHH"><img src="https://i.ibb.co/W4L3MT66/Screenshot-2025-06-02-12-46-42-082-com-google-android-apps-photos.jpg" alt="Screenshot-2025-06-02-12-46-42-082-com-google-android-apps-photos" border="0"></a>
+  <a href="https://ibb.co/v6SBTtHH"><img src="https://i.ibb.co/W4L3MT66/Screenshot-2025-06-02-12-46-42-082-com-google-android-apps-photos.jpg" alt="chotu photo"2025-06-02-12-46-42-082-com-google-android-apps-photos" border="0"></a>
 </html>
